@startuml

title __DISCOVER's Class Diagram__\n

  namespace com.mad.mymoon {
    namespace ui.Discover {
      class com.mad.mymoon.ui.Discover.DiscoverFragment {
          + onCreateView()
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.Discover {
      class com.mad.mymoon.ui.Discover.DiscoverViewModel {
          - mText : MutableLiveData<String>
          + DiscoverViewModel()
          + getText()
      }
    }
  }
  

  com.mad.mymoon.ui.Discover.DiscoverFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.Discover.DiscoverFragment o-- com.mad.mymoon.ui.Discover.DiscoverViewModel : discoverViewModel
  com.mad.mymoon.ui.Discover.DiscoverViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
